--- a/catalogue.html
+++ b/catalogue.html
@@ -1,41 +1,83 @@
 <html>
+	<h1 align='center'> Catalogue </h1>
 	<body>
-		<h1> Catalogue </h1>
-		<table cellspacing="3">
+		<h3 align='center'>Academic</h3>
+		<table align='center' height='100' width='500' border='5' cellspacing="5">
 			<tr>
+				<th> LOGO	</th>
 				<th> BOOK NAME 	</th>
 				<th> PRICE		</th>
 				<th> STOCK	 	</th>
+				<th> TO CART	</th>
 			</tr>
 			<tr>
-				<td> Atomic Habits </td>
-				<td> ₹35  </td>
-				<td> 2	  </td>
-			</tr>
-			<tr>
+				<td> <img src='3.png' height='50' width='50' alt='Search Image'> </td>
 				<td> Introduction to Python </td>
-				<td> ₹45  </td>
-				<td> 3	  </td>
-			</tr>
-			<tr>
-				<td> The Five AM Club </td>
 				<td> ₹35  </td>
 				<td> 2	  </td>
+				<td> <input type = 'button' value = 'Add'> </td>
 			</tr>
 			<tr>
-				<td> Introduction to C++ </td>
-				<td> ₹45  </td>
+				<td> <img src='4.png' height='50' width='50' alt='Search Image'></td>
+				<td> Advanced C++ Guide </td>
+				<td> ₹60  </td>
+				<td> 2	  </td>
+				<td> <input type = 'button' value = 'Add'> </td>
+			</tr>
+		</table>
+		<h3 align='center'>Magazines</h3>
+		<table align='center' height='100' width='500' border='5' cellspacing="5">
+			<tr>
+				<th> LOGO	</th>
+				<th> BOOK NAME 	</th>
+				<th> PRICE		</th>
+				<th> STOCK	 	</th>
+				<th> TO CART	</th>
+			</tr>
+			<tr>
+				<td> <img src='5.jpg' height='25' width='50' alt='Search Image'></td>
+				<td> Time </td>
+				<td> ₹40  </td>
+				<td> 2	  </td>
+				<td> <input type = 'button' value = 'Add'> </td>
+			</tr>
+			<tr>
+				<td> <img src='6.png' height='15' width='50' alt='Search Image'></td>
+				<td> National Geographic </td>
+				<td> ₹30  </td>
 				<td> 3	  </td>
+				<td> <input type = 'button' value = 'Add'> </td>
 			</tr>
 			<tr>
+				<td> <img src='7.png' height='13' width='50' alt='Search Image'></td>
+				<td> Forbes </td>
+				<td> ₹60  </td>
+				<td> 1	  </td>
+				<td> <input type = 'button' value = 'Add'> </td>
+			</tr>
+		</table>
+		<h3 align='center'>Magazines</h3>
+		<table align='center' height='100' width='500' border='5' cellspacing="5">
+			<tr>
+				<th> LOGO	</th>
+				<th> BOOK NAME 	</th>
+				<th> PRICE		</th>
+				<th> STOCK	 	</th>
+				<th> TO CART	</th>
+			</tr>
+			<tr>
+				<td> <img src='8.svg' height='50' width='50' alt='Search Image'></td>
 				<td> Harry Potter: The Philosopher's Stone </td>
-				<td> ₹35  </td>
+				<td> ₹70  </td>
 				<td> 2	  </td>
+				<td> <input type = 'button' value = 'Add'> </td>
 			</tr>
 			<tr>
-				<td> Introduction to Java </td>
-				<td> ₹45  </td>
+				<td> <img src='9.jpg' height='15' width='50' alt='Search Image'></td>
+				<td> The Lord of the Rings: The Two Towers </td>
+				<td> ₹85  </td>
 				<td> 3	  </td>
+				<td> <input type = 'button' value = 'Add'> </td>
 			</tr>
 		</table>
 	</body>
